--- a/3-quiz)/3-2) lab_bulid_matrix/assignment_answer.ipynb
+++ b/3-quiz)/3-2) lab_bulid_matrix/assignment_answer.ipynb
@@ -40,63 +40,409 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 문제 확인"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    " \n",
+    "image = Image.open(\"question_image.png\")\n",
+    " \n",
+    "image.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 데이터 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     3.0\n",
-      "1     4.0\n",
-      "2     3.5\n",
-      "3     5.0\n",
-      "4     3.0\n",
-      "5     3.0\n",
-      "6     4.0\n",
-      "7     2.0\n",
-      "8     3.0\n",
-      "9     3.0\n",
-      "10    3.5\n",
-      "11    3.0\n",
-      "12    4.5\n",
-      "13    2.5\n",
-      "14    3.5\n",
-      "15    3.0\n",
-      "16    3.5\n",
-      "17    3.0\n",
-      "18    2.5\n",
-      "19    4.5\n",
-      "20    4.0\n",
-      "21    3.0\n",
-      "22    3.5\n",
-      "23    3.5\n",
-      "24    3.0\n",
-      "Name: rating, dtype: float64\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>target</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jack Matthews</td>\n",
+       "      <td>Lady in the Water</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jack Matthews</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jack Matthews</td>\n",
+       "      <td>You Me and Dupree</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jack Matthews</td>\n",
+       "      <td>Superman Returns</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jack Matthews</td>\n",
+       "      <td>The Night Listener</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mick LaSalle</td>\n",
+       "      <td>Lady in the Water</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mick LaSalle</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mick LaSalle</td>\n",
+       "      <td>Just My Luck</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Mick LaSalle</td>\n",
+       "      <td>Superman Returns</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mick LaSalle</td>\n",
+       "      <td>The Night Listener</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Claudia Puig</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Claudia Puig</td>\n",
+       "      <td>Just My Luck</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Claudia Puig</td>\n",
+       "      <td>The Night Listener</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>Lady in the Water</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>Just My Luck</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>Superman Returns</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>The Night Listener</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Lisa Rose</td>\n",
+       "      <td>You Me and Dupree</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Toby</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Toby</td>\n",
+       "      <td>Superman Returns</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Gene Seymour</td>\n",
+       "      <td>Lady in the Water</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Gene Seymour</td>\n",
+       "      <td>Snakes on a Plane</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Gene Seymour</td>\n",
+       "      <td>You Me and Dupree</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Gene Seymour</td>\n",
+       "      <td>The Night Listener</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           source              target  rating\n",
+       "0   Jack Matthews   Lady in the Water     3.0\n",
+       "1   Jack Matthews   Snakes on a Plane     4.0\n",
+       "2   Jack Matthews   You Me and Dupree     3.5\n",
+       "3   Jack Matthews    Superman Returns     5.0\n",
+       "4   Jack Matthews  The Night Listener     3.0\n",
+       "5    Mick LaSalle   Lady in the Water     3.0\n",
+       "6    Mick LaSalle   Snakes on a Plane     4.0\n",
+       "7    Mick LaSalle        Just My Luck     2.0\n",
+       "8    Mick LaSalle    Superman Returns     3.0\n",
+       "9    Mick LaSalle  The Night Listener     3.0\n",
+       "10   Claudia Puig   Snakes on a Plane     3.5\n",
+       "11   Claudia Puig        Just My Luck     3.0\n",
+       "12   Claudia Puig  The Night Listener     4.5\n",
+       "13      Lisa Rose   Lady in the Water     2.5\n",
+       "14      Lisa Rose   Snakes on a Plane     3.5\n",
+       "15      Lisa Rose        Just My Luck     3.0\n",
+       "16      Lisa Rose    Superman Returns     3.5\n",
+       "17      Lisa Rose  The Night Listener     3.0\n",
+       "18      Lisa Rose   You Me and Dupree     2.5\n",
+       "19           Toby   Snakes on a Plane     4.5\n",
+       "20           Toby    Superman Returns     4.0\n",
+       "21   Gene Seymour   Lady in the Water     3.0\n",
+       "22   Gene Seymour   Snakes on a Plane     3.5\n",
+       "23   Gene Seymour   You Me and Dupree     3.5\n",
+       "24   Gene Seymour  The Night Listener     3.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename = 0 # 초기화\n",
+    "data_url = \"./movie_rating.csv\"\n",
+    "filename = pd.read_csv(data_url, header = 0) \n",
+    "filename\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 1. group 사용자명 별\n",
+    "- 2. 그 사용자가 본 영화들 추리고 / 별점 입력 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>target</th>\n",
+       "      <th>Just My Luck</th>\n",
+       "      <th>Lady in the Water</th>\n",
+       "      <th>Snakes on a Plane</th>\n",
+       "      <th>Superman Returns</th>\n",
+       "      <th>The Night Listener</th>\n",
+       "      <th>You Me and Dupree</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>source</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Claudia Puig</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gene Seymour</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jack Matthews</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lisa Rose</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mick LaSalle</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toby</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "target         Just My Luck  Lady in the Water  Snakes on a Plane  \\\n",
+       "source                                                              \n",
+       "Claudia Puig            3.0                NaN                3.5   \n",
+       "Gene Seymour            NaN                3.0                3.5   \n",
+       "Jack Matthews           NaN                3.0                4.0   \n",
+       "Lisa Rose               3.0                2.5                3.5   \n",
+       "Mick LaSalle            2.0                3.0                4.0   \n",
+       "Toby                    NaN                NaN                4.5   \n",
+       "\n",
+       "target         Superman Returns  The Night Listener  You Me and Dupree  \n",
+       "source                                                                  \n",
+       "Claudia Puig                NaN                 4.5                NaN  \n",
+       "Gene Seymour                NaN                 3.0                3.5  \n",
+       "Jack Matthews               5.0                 3.0                3.5  \n",
+       "Lisa Rose                   3.5                 3.0                2.5  \n",
+       "Mick LaSalle                3.0                 3.0                NaN  \n",
+       "Toby                        4.0                 NaN                NaN  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "filename = 0 # 초기화\n",
+    "data_url = \"./movie_rating.csv\"\n",
+    "filename = pd.read_csv(data_url, header = 0) \n",
     "\n",
     "def get_rating_matrix():\n",
     "    global filename\n",
-    "filename = 0\n",
-    "data_url = \"./movie_rating.csv\"\n",
-    "filename = pd.read_csv(data_url, header = 0) \n",
-    "filename.head() \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "    filename = filename.groupby([\"source\",\"target\"])[\"rating\"].sum().unstack() #.fillna(0) 로 대체도 가능\n",
+    "    return filename\n",
+    "\n",
+    "\n",
+    "get_rating_matrix()\n"
    ]
   },
   {
